--- a/tests/cassettes/test_shipment_create_with_ids.yaml
+++ b/tests/cassettes/test_shipment_create_with_ids.yaml
@@ -22,8 +22,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id": "adr_6de356de1ccb11ed837bac1f6bc72124", "object": "Address",
-        "created_at": "2022-08-15T18:52:36+00:00", "updated_at": "2022-08-15T18:52:36+00:00",
+      string: '{"id": "adr_246c9684f40711edb466ac1f6bc7bdc6", "object": "Address",
+        "created_at": "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00",
         "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -37,11 +37,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"fd6ad42a0a492d5da667d16b9568063e"
+      - W/"b432e3d3df2b21851b2e66c4e2310bf0"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_6de356de1ccb11ed837bac1f6bc72124
+      - /api/v2/addresses/adr_246c9684f40711edb466ac1f6bc7bdc6
       pragma:
       - no-cache
       referrer-policy:
@@ -57,20 +57,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47a62fa95f4e79a7aa9002634f5
+      - 23bee7e56463afefe7872f800027a73c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.045202'
+      - '0.047270'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -99,8 +99,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id": "adr_6e161e1f1ccb11ed8e67ac1f6bc7b362", "object": "Address",
-        "created_at": "2022-08-15T18:52:36+00:00", "updated_at": "2022-08-15T18:52:36+00:00",
+      string: '{"id": "adr_249c7c44f40711ed8ac3ac1f6b0a0d1e", "object": "Address",
+        "created_at": "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00",
         "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -114,11 +114,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"a0771bb8207b0950d5c71113ae9ce42d"
+      - W/"bbc1fd04e6558270728ced29b2f81442"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_6e161e1f1ccb11ed8e67ac1f6bc7b362
+      - /api/v2/addresses/adr_249c7c44f40711ed8ac3ac1f6b0a0d1e
       pragma:
       - no-cache
       referrer-policy:
@@ -134,20 +134,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47a62fa95f4e79a7aa90026351b
+      - 23bee7e56463afefe7872f800027a763
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb11nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.042245'
+      - '0.036120'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -174,8 +174,8 @@ interactions:
     uri: https://api.easypost.com/v2/parcels
   response:
     body:
-      string: '{"id": "prcl_9b8876cddbc6415091e6fb7a9f305d43", "object": "Parcel",
-        "created_at": "2022-08-15T18:52:37Z", "updated_at": "2022-08-15T18:52:37Z",
+      string: '{"id": "prcl_15d259708d9c4231bbe4d6c38d032e87", "object": "Parcel",
+        "created_at": "2023-05-16T16:31:43Z", "updated_at": "2023-05-16T16:31:43Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
         15.4, "mode": "test"}'
     headers:
@@ -186,11 +186,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"f452d4f7c68435eca6803b9bd24f0c0b"
+      - W/"902396e46ebf1a381d30cb4b9f342f1f"
       expires:
       - '0'
       location:
-      - /api/v2/parcels.prcl_9b8876cddbc6415091e6fb7a9f305d43
+      - /api/prcl_15d259708d9c4231bbe4d6c38d032e87/parcels
       pragma:
       - no-cache
       referrer-policy:
@@ -201,36 +201,34 @@ interactions:
       - chunked
       x-backend:
       - easypost
-      x-canary:
-      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47a62fa95f5e79a7aa90026352a
+      - 23bee7e56463afefe7872f800027a76c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.032676'
+      - '0.025857'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
       code: 201
       message: Created
 - request:
-    body: '{"shipment": {"from_address": {"id": "adr_6de356de1ccb11ed837bac1f6bc72124"},
-      "to_address": {"id": "adr_6e161e1f1ccb11ed8e67ac1f6bc7b362"}, "parcel": {"id":
-      "prcl_9b8876cddbc6415091e6fb7a9f305d43"}}, "carbon_offset": false}'
+    body: '{"shipment": {"from_address": {"id": "adr_246c9684f40711edb466ac1f6bc7bdc6"},
+      "to_address": {"id": "adr_249c7c44f40711ed8ac3ac1f6b0a0d1e"}, "parcel": {"id":
+      "prcl_15d259708d9c4231bbe4d6c38d032e87"}}, "carbon_offset": false}'
     headers:
       Accept:
       - '*/*'
@@ -250,86 +248,95 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2022-08-15T18:52:37Z", "is_return": false, "messages":
-        [{"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
+      string: '{"created_at": "2023-05-16T16:31:43Z", "is_return": false, "messages":
+        [{"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_711d8c4f9be54801b984e5dc9f2b5a7c",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}], "mode": "test", "options": {"currency": "USD", "payment": {"type":
         "SENDER"}, "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        null, "updated_at": "2022-08-15T18:52:37Z", "batch_id": null, "batch_status":
+        null, "updated_at": "2023-05-16T16:31:44Z", "batch_id": null, "batch_status":
         null, "batch_message": null, "customs_info": null, "from_address": {"id":
-        "adr_6de356de1ccb11ed837bac1f6bc72124", "object": "Address", "created_at":
-        "2022-08-15T18:52:36+00:00", "updated_at": "2022-08-15T18:52:36+00:00", "name":
+        "adr_246c9684f40711edb466ac1f6bc7bdc6", "object": "Address", "created_at":
+        "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
-        "US", "phone": "5555555555", "email": "test@example.com", "mode": "test",
-        "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
-        null, "verifications": {}}, "insurance": null, "order_id": null, "parcel":
-        {"id": "prcl_9b8876cddbc6415091e6fb7a9f305d43", "object": "Parcel", "created_at":
-        "2022-08-15T18:52:37Z", "updated_at": "2022-08-15T18:52:37Z", "length": 10.0,
-        "width": 8.0, "height": 4.0, "predefined_package": null, "weight": 15.4, "mode":
-        "test"}, "postage_label": null, "rates": [{"id": "rate_49b99ea5438141d99f52926aa556da82",
-        "object": "Rate", "created_at": "2022-08-15T18:52:37Z", "updated_at": "2022-08-15T18:52:37Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.37",
-        "currency": "USD", "retail_rate": "8.70", "retail_currency": "USD", "list_rate":
-        "7.37", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        1, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        1, "shipment_id": "shp_179acb5e6c7f4def952542968e795a6e", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_297f555415384651b85d46b4bc9a602d",
-        "object": "Rate", "created_at": "2022-08-15T18:52:37Z", "updated_at": "2022-08-15T18:52:37Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.49", "currency":
-        "USD", "retail_rate": "5.49", "retail_currency": "USD", "list_rate": "5.49",
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_15d259708d9c4231bbe4d6c38d032e87",
+        "object": "Parcel", "created_at": "2023-05-16T16:31:43Z", "updated_at": "2023-05-16T16:31:43Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_6e799193731b482da2e69b504ad2b781",
+        "object": "Rate", "created_at": "2023-05-16T16:31:44Z", "updated_at": "2023-05-16T16:31:44Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.85", "currency":
+        "USD", "retail_rate": "5.85", "retail_currency": "USD", "list_rate": "5.85",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
-        "shp_179acb5e6c7f4def952542968e795a6e", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        {"id": "rate_5d55e67d877548fc9dd972cf010a4617", "object": "Rate", "created_at":
-        "2022-08-15T18:52:37Z", "updated_at": "2022-08-15T18:52:37Z", "mode": "test",
-        "service": "Express", "carrier": "USPS", "rate": "23.75", "currency": "USD",
-        "retail_rate": "27.40", "retail_currency": "USD", "list_rate": "23.75", "list_currency":
+        "shp_830a7745d7244fecbf79a13ca495abdc", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_35ce07db23ed4838b90c7eddc51eb666", "object": "Rate", "created_at":
+        "2023-05-16T16:31:44Z", "updated_at": "2023-05-16T16:31:44Z", "mode": "test",
+        "service": "Express", "carrier": "USPS", "rate": "25.25", "currency": "USD",
+        "retail_rate": "29.20", "retail_currency": "USD", "list_rate": "25.25", "list_currency":
         "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
-        "shp_179acb5e6c7f4def952542968e795a6e", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        {"id": "rate_49d0511a40c648b4ade0c896679151cb", "object": "Rate", "created_at":
-        "2022-08-15T18:52:37Z", "updated_at": "2022-08-15T18:52:37Z", "mode": "test",
-        "service": "ParcelSelect", "carrier": "USPS", "rate": "7.22", "currency":
-        "USD", "retail_rate": "7.22", "retail_currency": "USD", "list_rate": "7.22",
+        "shp_830a7745d7244fecbf79a13ca495abdc", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_968c5eb28caa4864acb3cb8feedd6303", "object": "Rate", "created_at":
+        "2023-05-16T16:31:44Z", "updated_at": "2023-05-16T16:31:44Z", "mode": "test",
+        "service": "ParcelSelect", "carrier": "USPS", "rate": "6.47", "currency":
+        "USD", "retail_rate": "6.99", "retail_currency": "USD", "list_rate": "6.99",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
-        "shp_179acb5e6c7f4def952542968e795a6e", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "shp_830a7745d7244fecbf79a13ca495abdc", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_2eb934a430d446b4965ea55c2c4cd5e7", "object": "Rate", "created_at":
+        "2023-05-16T16:31:44Z", "updated_at": "2023-05-16T16:31:44Z", "mode": "test",
+        "service": "Priority", "carrier": "USPS", "rate": "7.00", "currency": "USD",
+        "retail_rate": "9.35", "retail_currency": "USD", "list_rate": "7.64", "list_currency":
+        "USD", "billing_type": "easypost", "delivery_days": 1, "delivery_date": null,
+        "delivery_date_guaranteed": false, "est_delivery_days": 1, "shipment_id":
+        "shp_830a7745d7244fecbf79a13ca495abdc", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
         "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
-        null, "to_address": {"id": "adr_6e161e1f1ccb11ed8e67ac1f6bc7b362", "object":
-        "Address", "created_at": "2022-08-15T18:52:36+00:00", "updated_at": "2022-08-15T18:52:36+00:00",
+        null, "to_address": {"id": "adr_249c7c44f40711ed8ac3ac1f6b0a0d1e", "object":
+        "Address", "created_at": "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00",
         "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
-        "US", "phone": "5555555555", "email": "test@example.com", "mode": "test",
-        "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
-        null, "verifications": {}}, "usps_zone": 1, "return_address": {"id": "adr_6de356de1ccb11ed837bac1f6bc72124",
-        "object": "Address", "created_at": "2022-08-15T18:52:36+00:00", "updated_at":
-        "2022-08-15T18:52:36+00:00", "name": "Jack Sparrow", "company": null, "street1":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "usps_zone": 1, "return_address": {"id": "adr_246c9684f40711edb466ac1f6bc7bdc6",
+        "object": "Address", "created_at": "2023-05-16T16:31:43+00:00", "updated_at":
+        "2023-05-16T16:31:43+00:00", "name": "Jack Sparrow", "company": null, "street1":
         "388 Townsend St", "street2": "Apt 20", "city": "San Francisco", "state":
-        "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email": "test@example.com",
+        "CA", "zip": "94107", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_6e161e1f1ccb11ed8e67ac1f6bc7b362", "object": "Address", "created_at":
-        "2022-08-15T18:52:36+00:00", "updated_at": "2022-08-15T18:52:36+00:00", "name":
+        "adr_249c7c44f40711ed8ac3ac1f6b0a0d1e", "object": "Address", "created_at":
+        "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
-        "US", "phone": "5555555555", "email": "test@example.com", "mode": "test",
-        "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
-        null, "verifications": {}}, "forms": [], "fees": [], "id": "shp_179acb5e6c7f4def952542968e795a6e",
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "forms": [], "fees": [], "id": "shp_830a7745d7244fecbf79a13ca495abdc",
         "object": "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '5029'
+      - '5854'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"91b5ddd8b39b3dde4d5915550c73e8bb"
+      - W/"c573b9dd80e322649943bd3ade22c33e"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_179acb5e6c7f4def952542968e795a6e
+      - /api/v2/shipments/shp_830a7745d7244fecbf79a13ca495abdc
       pragma:
       - no-cache
       referrer-policy:
@@ -345,20 +352,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47a62fa95f5e79a7aa900263535
+      - 23bee7e56463afefe7872f800027a779
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.593168'
+      - '0.748315'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
