--- a/tests/cassettes/test_shipment_create_empty_objects.yaml
+++ b/tests/cassettes/test_shipment_create_empty_objects.yaml
@@ -27,86 +27,95 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2022-08-15T18:52:34Z", "is_return": false, "messages":
-        [{"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
+      string: '{"created_at": "2023-05-16T16:31:40Z", "is_return": false, "messages":
+        [{"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_711d8c4f9be54801b984e5dc9f2b5a7c",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}], "mode": "test", "options": {"currency": "USD", "payment": {"type":
         "SENDER"}, "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        null, "updated_at": "2022-08-15T18:52:35Z", "batch_id": null, "batch_status":
+        null, "updated_at": "2023-05-16T16:31:41Z", "batch_id": null, "batch_status":
         null, "batch_message": null, "customs_info": null, "from_address": {"id":
-        "adr_6cd346041ccb11eda67bac1f6bc7bdc6", "object": "Address", "created_at":
-        "2022-08-15T18:52:34+00:00", "updated_at": "2022-08-15T18:52:34+00:00", "name":
+        "adr_23176c10f40711ed99113cecef1b359e", "object": "Address", "created_at":
+        "2023-05-16T16:31:40+00:00", "updated_at": "2023-05-16T16:31:40+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
-        "US", "phone": "5555555555", "email": "test@example.com", "mode": "test",
-        "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
-        null, "verifications": {}}, "insurance": null, "order_id": null, "parcel":
-        {"id": "prcl_769e54c2ead94b3db7e86aa10dce1d70", "object": "Parcel", "created_at":
-        "2022-08-15T18:52:34Z", "updated_at": "2022-08-15T18:52:34Z", "length": 10.0,
-        "width": 8.0, "height": 4.0, "predefined_package": null, "weight": 15.4, "mode":
-        "test"}, "postage_label": null, "rates": [{"id": "rate_c52ca5bef743478593da0f1fc4405090",
-        "object": "Rate", "created_at": "2022-08-15T18:52:35Z", "updated_at": "2022-08-15T18:52:35Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "29.50",
-        "currency": "USD", "retail_rate": "33.55", "retail_currency": "USD", "list_rate":
-        "29.50", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_44a2f6b4a91b4ecd83b21da5e5b93c6d",
+        "object": "Parcel", "created_at": "2023-05-16T16:31:40Z", "updated_at": "2023-05-16T16:31:40Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_54d99b19d719480e8e0e41348c9ecf6f",
+        "object": "Rate", "created_at": "2023-05-16T16:31:41Z", "updated_at": "2023-05-16T16:31:41Z",
+        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
+        "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
+        "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_ca128df3ecc644658a896296e2002be2", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_d4c90f1f91ef428b81b681d1cc67e69b",
-        "object": "Rate", "created_at": "2022-08-15T18:52:35Z", "updated_at": "2022-08-15T18:52:35Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "7.75",
+        null, "shipment_id": "shp_6b58000596a1410cb683c886c5d3e153", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_ef1cc87c2f98443ca90529a70b41642a",
+        "object": "Rate", "created_at": "2023-05-16T16:31:41Z", "updated_at": "2023-05-16T16:31:41Z",
+        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
         "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
         "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_ca128df3ecc644658a896296e2002be2", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_c1e06f9a32754d54b7572c486abe6626",
-        "object": "Rate", "created_at": "2022-08-15T18:52:35Z", "updated_at": "2022-08-15T18:52:35Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.90",
-        "currency": "USD", "retail_rate": "9.45", "retail_currency": "USD", "list_rate":
-        "7.90", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        5, "shipment_id": "shp_6b58000596a1410cb683c886c5d3e153", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_6db9842202fd46c7940c0db418f7a49c",
+        "object": "Rate", "created_at": "2023-05-16T16:31:41Z", "updated_at": "2023-05-16T16:31:41Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
+        "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_ca128df3ecc644658a896296e2002be2", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_5324c1c2a9154d5385850a47617a7828",
-        "object": "Rate", "created_at": "2022-08-15T18:52:35Z", "updated_at": "2022-08-15T18:52:35Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.57", "currency":
-        "USD", "retail_rate": "5.57", "retail_currency": "USD", "list_rate": "5.57",
+        2, "shipment_id": "shp_6b58000596a1410cb683c886c5d3e153", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_2db10f2e8fba4318ac2a92594630d7c0",
+        "object": "Rate", "created_at": "2023-05-16T16:31:41Z", "updated_at": "2023-05-16T16:31:41Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
+        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_ca128df3ecc644658a896296e2002be2", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "shp_6b58000596a1410cb683c886c5d3e153", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
         "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
-        null, "to_address": {"id": "adr_6cd163961ccb11eda679ac1f6bc7bdc6", "object":
-        "Address", "created_at": "2022-08-15T18:52:34+00:00", "updated_at": "2022-08-15T18:52:34+00:00",
+        null, "to_address": {"id": "adr_23151d47f40711ed99103cecef1b359e", "object":
+        "Address", "created_at": "2023-05-16T16:31:40+00:00", "updated_at": "2023-05-16T16:31:40+00:00",
         "name": "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
-        "phone": "5555555555", "email": "test@example.com", "mode": "test", "carrier_facility":
+        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "usps_zone": 4, "return_address": {"id": "adr_6cd346041ccb11eda67bac1f6bc7bdc6",
-        "object": "Address", "created_at": "2022-08-15T18:52:34+00:00", "updated_at":
-        "2022-08-15T18:52:34+00:00", "name": "Jack Sparrow", "company": null, "street1":
+        {}}, "usps_zone": 4, "return_address": {"id": "adr_23176c10f40711ed99113cecef1b359e",
+        "object": "Address", "created_at": "2023-05-16T16:31:40+00:00", "updated_at":
+        "2023-05-16T16:31:40+00:00", "name": "Jack Sparrow", "company": null, "street1":
         "388 Townsend St", "street2": "Apt 20", "city": "San Francisco", "state":
-        "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email": "test@example.com",
+        "CA", "zip": "94107", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_6cd163961ccb11eda679ac1f6bc7bdc6", "object": "Address", "created_at":
-        "2022-08-15T18:52:34+00:00", "updated_at": "2022-08-15T18:52:34+00:00", "name":
+        "adr_23151d47f40711ed99103cecef1b359e", "object": "Address", "created_at":
+        "2023-05-16T16:31:40+00:00", "updated_at": "2023-05-16T16:31:40+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
-        "phone": "5555555555", "email": "test@example.com", "mode": "test", "carrier_facility":
+        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "forms": [], "fees": [], "id": "shp_ca128df3ecc644658a896296e2002be2",
+        {}}, "forms": [], "fees": [], "id": "shp_6b58000596a1410cb683c886c5d3e153",
         "object": "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '5025'
+      - '5851'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"43eff21fda09cb265bc50f0816a7ab27"
+      - W/"e20fada0452013bea41fb951d4f7c860"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_ca128df3ecc644658a896296e2002be2
+      - /api/v2/shipments/shp_6b58000596a1410cb683c886c5d3e153
       pragma:
       - no-cache
       referrer-policy:
@@ -122,20 +131,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47f62fa95f2e79a7aa700263462
+      - 23bee7e06463afece7872f7e0027a679
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.616729'
+      - '0.851051'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
