--- a/tests/cassettes/test_shipment_create_with_carbon_offset.yaml
+++ b/tests/cassettes/test_shipment_create_with_carbon_offset.yaml
@@ -26,91 +26,100 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2022-08-15T19:00:33Z", "is_return": false, "messages":
-        [{"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
+      string: '{"created_at": "2023-05-16T16:31:48Z", "is_return": false, "messages":
+        [{"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_711d8c4f9be54801b984e5dc9f2b5a7c",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}], "mode": "test", "options": {"currency": "USD", "payment": {"type":
         "SENDER"}, "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        null, "updated_at": "2022-08-15T19:00:34Z", "batch_id": null, "batch_status":
+        null, "updated_at": "2023-05-16T16:31:49Z", "batch_id": null, "batch_status":
         null, "batch_message": null, "customs_info": null, "from_address": {"id":
-        "adr_8a3caf031ccc11ed8d9aac1f6b0a0d1e", "object": "Address", "created_at":
-        "2022-08-15T19:00:33+00:00", "updated_at": "2022-08-15T19:00:33+00:00", "name":
+        "adr_27b0f068f40711ed9720ac1f6b0a0d1e", "object": "Address", "created_at":
+        "2023-05-16T16:31:48+00:00", "updated_at": "2023-05-16T16:31:48+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
-        "US", "phone": "5555555555", "email": "test@example.com", "mode": "test",
-        "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
-        null, "verifications": {}}, "insurance": null, "order_id": null, "parcel":
-        {"id": "prcl_1207628678e54132a930b3ef6f1091fb", "object": "Parcel", "created_at":
-        "2022-08-15T19:00:33Z", "updated_at": "2022-08-15T19:00:33Z", "length": 10.0,
-        "width": 8.0, "height": 4.0, "predefined_package": null, "weight": 15.4, "mode":
-        "test"}, "postage_label": null, "rates": [{"id": "rate_e7203f9671ab44d186fdea10c3e7d27b",
-        "object": "Rate", "created_at": "2022-08-15T19:00:34Z", "updated_at": "2022-08-15T19:00:34Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.57", "currency":
-        "USD", "retail_rate": "5.57", "retail_currency": "USD", "list_rate": "5.57",
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_3d5da6ffe19146ada9bcccbef087493f",
+        "object": "Parcel", "created_at": "2023-05-16T16:31:48Z", "updated_at": "2023-05-16T16:31:48Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_61b72dba67bf4bc98cbce1a9a97cfa9b",
+        "object": "Rate", "created_at": "2023-05-16T16:31:49Z", "updated_at": "2023-05-16T16:31:49Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
+        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_b8916347bf3547a78895048844df2aa1", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e",
+        "shp_995126fca8b747d7a4fe50b2b91a10e1", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e",
         "carbon_offset": {"object": "CarbonOffset", "grams": 36, "price": "0.11",
-        "currency": "USD"}}, {"id": "rate_9487e2266096476381efe2d192a9e8f0", "object":
-        "Rate", "created_at": "2022-08-15T19:00:34Z", "updated_at": "2022-08-15T19:00:34Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "29.50",
-        "currency": "USD", "retail_rate": "33.55", "retail_currency": "USD", "list_rate":
-        "29.50", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        "currency": "USD"}}, {"id": "rate_4de7b0ebbd1d4c5ba9e200735a760a17", "object":
+        "Rate", "created_at": "2023-05-16T16:31:49Z", "updated_at": "2023-05-16T16:31:49Z",
+        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
+        "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
+        "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_b8916347bf3547a78895048844df2aa1", "carrier_account_id":
+        null, "shipment_id": "shp_995126fca8b747d7a4fe50b2b91a10e1", "carrier_account_id":
         "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 36, "price": "0.11", "currency": "USD"}}, {"id": "rate_9b07895623d54a8ab29f04c2546bee69",
-        "object": "Rate", "created_at": "2022-08-15T19:00:34Z", "updated_at": "2022-08-15T19:00:34Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "7.75",
+        "grams": 36, "price": "0.11", "currency": "USD"}}, {"id": "rate_203ff3eaed4f4b37b62d579b992d388d",
+        "object": "Rate", "created_at": "2023-05-16T16:31:49Z", "updated_at": "2023-05-16T16:31:49Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
+        "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_995126fca8b747d7a4fe50b2b91a10e1", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
+        "grams": 36, "price": "0.11", "currency": "USD"}}, {"id": "rate_51045f28155641719bdc71bd99e8658e",
+        "object": "Rate", "created_at": "2023-05-16T16:31:49Z", "updated_at": "2023-05-16T16:31:49Z",
+        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
         "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
         "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_b8916347bf3547a78895048844df2aa1", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 36, "price": "0.11", "currency": "USD"}}, {"id": "rate_2f5ede3357f541d58a71442566c940dc",
-        "object": "Rate", "created_at": "2022-08-15T19:00:34Z", "updated_at": "2022-08-15T19:00:34Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.90",
-        "currency": "USD", "retail_rate": "9.45", "retail_currency": "USD", "list_rate":
-        "7.90", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_b8916347bf3547a78895048844df2aa1", "carrier_account_id":
+        5, "shipment_id": "shp_995126fca8b747d7a4fe50b2b91a10e1", "carrier_account_id":
         "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
         "grams": 36, "price": "0.11", "currency": "USD"}}], "refund_status": null,
         "scan_form": null, "selected_rate": null, "tracker": null, "to_address": {"id":
-        "adr_8a3853ea1ccc11ed8754ac1f6bc72124", "object": "Address", "created_at":
-        "2022-08-15T19:00:33+00:00", "updated_at": "2022-08-15T19:00:33+00:00", "name":
+        "adr_27ae6a8ef40711eda8a13cecef1b359e", "object": "Address", "created_at":
+        "2023-05-16T16:31:48+00:00", "updated_at": "2023-05-16T16:31:48+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
-        "phone": "5555555555", "email": "test@example.com", "mode": "test", "carrier_facility":
+        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "usps_zone": 4, "return_address": {"id": "adr_8a3caf031ccc11ed8d9aac1f6b0a0d1e",
-        "object": "Address", "created_at": "2022-08-15T19:00:33+00:00", "updated_at":
-        "2022-08-15T19:00:33+00:00", "name": "Jack Sparrow", "company": null, "street1":
+        {}}, "usps_zone": 4, "return_address": {"id": "adr_27b0f068f40711ed9720ac1f6b0a0d1e",
+        "object": "Address", "created_at": "2023-05-16T16:31:48+00:00", "updated_at":
+        "2023-05-16T16:31:48+00:00", "name": "Jack Sparrow", "company": null, "street1":
         "388 Townsend St", "street2": "Apt 20", "city": "San Francisco", "state":
-        "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email": "test@example.com",
+        "CA", "zip": "94107", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_8a3853ea1ccc11ed8754ac1f6bc72124", "object": "Address", "created_at":
-        "2022-08-15T19:00:33+00:00", "updated_at": "2022-08-15T19:00:33+00:00", "name":
+        "adr_27ae6a8ef40711eda8a13cecef1b359e", "object": "Address", "created_at":
+        "2023-05-16T16:31:48+00:00", "updated_at": "2023-05-16T16:31:48+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
-        "phone": "5555555555", "email": "test@example.com", "mode": "test", "carrier_facility":
+        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "forms": [], "fees": [], "id": "shp_b8916347bf3547a78895048844df2aa1",
+        {}}, "forms": [], "fees": [], "id": "shp_995126fca8b747d7a4fe50b2b91a10e1",
         "object": "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '5365'
+      - '6191'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"0db45ba974b78ec0aa6e69e041b473fa"
+      - W/"5f21bf2461c3b6199f589f838202f082"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_b8916347bf3547a78895048844df2aa1
+      - /api/v2/shipments/shp_995126fca8b747d7a4fe50b2b91a10e1
       pragma:
       - no-cache
       referrer-policy:
@@ -126,20 +135,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 042f43e362fa97d1e79afddf002517d9
+      - 23bee7e26463aff4e7872f9c0027a961
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb2nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.925634'
+      - '0.994876'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305152249-750e1e7d95-master
       x-xss-protection:
       - 1; mode=block
     status:
