--- a/tests/cassettes/test_tracker_create.yaml
+++ b/tests/cassettes/test_tracker_create.yaml
@@ -20,36 +20,42 @@ interactions:
     uri: https://api.easypost.com/v2/trackers
   response:
     body:
-      string: '{"id": "trk_6d9f167f4ecd4433aca7434c12564f5c", "object": "Tracker",
+      string: '{"id": "trk_8de54ec569444a0eabd75bd9dcecc96b", "object": "Tracker",
         "mode": "test", "tracking_code": "EZ1000000001", "status": "pre_transit",
-        "status_detail": "unknown", "created_at": "2022-08-15T18:52:43Z", "updated_at":
-        "2022-08-15T18:52:43Z", "signed_by": null, "weight": 17.6, "est_delivery_date":
-        "2022-08-15T18:52:43Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
-        [{"object": "TrackingDetail", "message": "Pre-Shipment information received",
-        "description": null, "status": "pre_transit", "status_detail": null, "datetime":
-        "2022-07-15T18:52:43Z", "source": "EasyPost", "carrier_code": null, "tracking_location":
-        {"object": "TrackingLocation", "city": null, "state": null, "country": null,
-        "zip": null}}, {"object": "TrackingDetail", "message": "Shipping label created",
-        "description": null, "status": "pre_transit", "status_detail": null, "datetime":
-        "2022-07-16T13:41:43Z", "source": "EasyPost", "carrier_code": null, "tracking_location":
-        {"object": "TrackingLocation", "city": null, "state": null, "country": null,
-        "zip": null}}], "carrier_detail": null, "finalized": true, "is_return": false,
-        "public_url": "https://track.easypost.com/djE6dHJrXzZkOWYxNjdmNGVjZDQ0MzNhY2E3NDM0YzEyNTY0ZjVj",
+        "status_detail": "status_update", "created_at": "2023-05-16T16:44:03Z", "updated_at":
+        "2023-05-16T16:44:03Z", "signed_by": null, "weight": null, "est_delivery_date":
+        "2023-05-16T16:44:02Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
+        [{"object": "TrackingDetail", "message": "Pre-Shipment Info Sent to USPS",
+        "description": null, "status": "pre_transit", "status_detail": "status_update",
+        "datetime": "2023-04-16T16:44:02Z", "source": "USPS", "carrier_code": null,
+        "tracking_location": {"object": "TrackingLocation", "city": null, "state":
+        null, "country": null, "zip": null}}, {"object": "TrackingDetail", "message":
+        "Shipping Label Created", "description": null, "status": "pre_transit", "status_detail":
+        "status_update", "datetime": "2023-04-17T05:21:02Z", "source": "USPS", "carrier_code":
+        null, "tracking_location": {"object": "TrackingLocation", "city": "HOUSTON",
+        "state": "TX", "country": null, "zip": "77063"}}], "carrier_detail": {"object":
+        "CarrierDetail", "service": "First-Class Package Service", "container_type":
+        null, "est_delivery_date_local": null, "est_delivery_time_local": null, "origin_location":
+        "HOUSTON TX, 77001", "origin_tracking_location": {"object": "TrackingLocation",
+        "city": "HOUSTON", "state": "TX", "country": null, "zip": "77063"}, "destination_location":
+        "CHARLESTON SC, 29401", "destination_tracking_location": null, "guaranteed_delivery_date":
+        null, "alternate_identifier": null, "initial_delivery_attempt": null}, "finalized":
+        true, "is_return": false, "public_url": "https://track.easypost.com/djE6dHJrXzhkZTU0ZWM1Njk0NDRhMGVhYmQ3NWJkOWRjZWNjOTZi",
         "fees": [{"object": "Fee", "type": "TrackerFee", "amount": "0.02000", "charged":
         false, "refunded": false}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '1224'
+      - '1724'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"04d306c5095210c7182362ba486a64d3"
+      - W/"0bb4a4435918bb7a126c1ebd891be43d"
       expires:
       - '0'
       location:
-      - /api/v2/trackers/trk_6d9f167f4ecd4433aca7434c12564f5c
+      - /api/v2/trackers/trk_8de54ec569444a0eabd75bd9dcecc96b
       pragma:
       - no-cache
       referrer-policy:
@@ -65,7 +71,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47b62fa95fbe79a7aea0026374a
+      - de846e086463b2d2e787383b002bd6b7
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -73,12 +79,12 @@ interactions:
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.104629'
+      - '0.131016'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
