--- a/tests/cassettes/test_tracker_retrieve.yaml
+++ b/tests/cassettes/test_tracker_retrieve.yaml
@@ -20,36 +20,40 @@ interactions:
     uri: https://api.easypost.com/v2/trackers
   response:
     body:
-      string: '{"id": "trk_f76f94b8b9f7474c9ffca2642dfdb768", "object": "Tracker",
+      string: '{"id": "trk_8de54ec569444a0eabd75bd9dcecc96b", "object": "Tracker",
         "mode": "test", "tracking_code": "EZ1000000001", "status": "pre_transit",
-        "status_detail": "unknown", "created_at": "2022-08-15T18:52:43Z", "updated_at":
-        "2022-08-15T18:52:43Z", "signed_by": null, "weight": 17.6, "est_delivery_date":
-        "2022-08-15T18:52:43Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
-        [{"object": "TrackingDetail", "message": "Pre-Shipment information received",
-        "description": null, "status": "pre_transit", "status_detail": null, "datetime":
-        "2022-07-15T18:52:43Z", "source": "EasyPost", "carrier_code": null, "tracking_location":
-        {"object": "TrackingLocation", "city": null, "state": null, "country": null,
-        "zip": null}}, {"object": "TrackingDetail", "message": "Shipping label created",
-        "description": null, "status": "pre_transit", "status_detail": null, "datetime":
-        "2022-07-16T13:41:43Z", "source": "EasyPost", "carrier_code": null, "tracking_location":
-        {"object": "TrackingLocation", "city": null, "state": null, "country": null,
-        "zip": null}}], "carrier_detail": null, "finalized": true, "is_return": false,
-        "public_url": "https://track.easypost.com/djE6dHJrX2Y3NmY5NGI4YjlmNzQ3NGM5ZmZjYTI2NDJkZmRiNzY4",
-        "fees": [{"object": "Fee", "type": "TrackerFee", "amount": "0.02000", "charged":
-        false, "refunded": false}]}'
+        "status_detail": "status_update", "created_at": "2023-05-16T16:44:03Z", "updated_at":
+        "2023-05-16T16:44:03Z", "signed_by": null, "weight": null, "est_delivery_date":
+        "2023-05-16T16:44:03Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
+        [{"object": "TrackingDetail", "message": "Pre-Shipment Info Sent to USPS",
+        "description": null, "status": "pre_transit", "status_detail": "status_update",
+        "datetime": "2023-04-16T16:44:03Z", "source": "USPS", "carrier_code": null,
+        "tracking_location": {"object": "TrackingLocation", "city": null, "state":
+        null, "country": null, "zip": null}}, {"object": "TrackingDetail", "message":
+        "Shipping Label Created", "description": null, "status": "pre_transit", "status_detail":
+        "status_update", "datetime": "2023-04-17T05:21:03Z", "source": "USPS", "carrier_code":
+        null, "tracking_location": {"object": "TrackingLocation", "city": "HOUSTON",
+        "state": "TX", "country": null, "zip": "77063"}}], "carrier_detail": {"object":
+        "CarrierDetail", "service": "First-Class Package Service", "container_type":
+        null, "est_delivery_date_local": null, "est_delivery_time_local": null, "origin_location":
+        "HOUSTON TX, 77001", "origin_tracking_location": {"object": "TrackingLocation",
+        "city": "HOUSTON", "state": "TX", "country": null, "zip": "77063"}, "destination_location":
+        "CHARLESTON SC, 29401", "destination_tracking_location": null, "guaranteed_delivery_date":
+        null, "alternate_identifier": null, "initial_delivery_attempt": null}, "finalized":
+        true, "is_return": false, "public_url": "https://track.easypost.com/djE6dHJrXzhkZTU0ZWM1Njk0NDRhMGVhYmQ3NWJkOWRjZWNjOTZi"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '1224'
+      - '1626'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"ade07a9ca613e8891b1c2679b543fdd1"
+      - W/"0f24163af2b3c881a3e3e628f58fdd51"
       expires:
       - '0'
       location:
-      - /api/v2/trackers/trk_f76f94b8b9f7474c9ffca2642dfdb768
+      - /api/v2/trackers/trk_8de54ec569444a0eabd75bd9dcecc96b
       pragma:
       - no-cache
       referrer-policy:
@@ -65,25 +69,25 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47c62fa95fbe79a7aeb0026376d
+      - de846e056463b2d3e787383c002bd6e6
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.119552'
+      - '0.056516'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
-      code: 201
-      message: Created
+      code: 200
+      message: OK
 - request:
     body: null
     headers:
@@ -98,21 +102,21 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/trackers/trk_f76f94b8b9f7474c9ffca2642dfdb768
+    uri: https://api.easypost.com/v2/trackers/trk_8de54ec569444a0eabd75bd9dcecc96b
   response:
     body:
-      string: '{"id": "trk_f76f94b8b9f7474c9ffca2642dfdb768", "object": "Tracker",
+      string: '{"id": "trk_8de54ec569444a0eabd75bd9dcecc96b", "object": "Tracker",
         "mode": "test", "tracking_code": "EZ1000000001", "status": "pre_transit",
-        "status_detail": "status_update", "created_at": "2022-08-15T18:52:43Z", "updated_at":
-        "2022-08-15T18:52:43Z", "signed_by": null, "weight": null, "est_delivery_date":
-        "2022-08-15T18:52:43Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
+        "status_detail": "status_update", "created_at": "2023-05-16T16:44:03Z", "updated_at":
+        "2023-05-16T16:44:03Z", "signed_by": null, "weight": null, "est_delivery_date":
+        "2023-05-16T16:44:03Z", "shipment_id": null, "carrier": "USPS", "tracking_details":
         [{"object": "TrackingDetail", "message": "Pre-Shipment Info Sent to USPS",
         "description": null, "status": "pre_transit", "status_detail": "status_update",
-        "datetime": "2022-07-15T18:52:43Z", "source": "USPS", "carrier_code": null,
+        "datetime": "2023-04-16T16:44:03Z", "source": "USPS", "carrier_code": null,
         "tracking_location": {"object": "TrackingLocation", "city": null, "state":
         null, "country": null, "zip": null}}, {"object": "TrackingDetail", "message":
         "Shipping Label Created", "description": null, "status": "pre_transit", "status_detail":
-        "status_update", "datetime": "2022-07-16T07:29:43Z", "source": "USPS", "carrier_code":
+        "status_update", "datetime": "2023-04-17T05:21:03Z", "source": "USPS", "carrier_code":
         null, "tracking_location": {"object": "TrackingLocation", "city": "HOUSTON",
         "state": "TX", "country": null, "zip": "77063"}}], "fees": [{"object": "Fee",
         "type": "TrackerFee", "amount": "0.02000", "charged": false, "refunded": false}],
@@ -122,7 +126,7 @@ interactions:
         {"object": "TrackingLocation", "city": "HOUSTON", "state": "TX", "country":
         null, "zip": "77063"}, "destination_location": "CHARLESTON SC, 29401", "destination_tracking_location":
         null, "guaranteed_delivery_date": null, "alternate_identifier": null, "initial_delivery_attempt":
-        null}, "public_url": "https://track.easypost.com/djE6dHJrX2Y3NmY5NGI4YjlmNzQ3NGM5ZmZjYTI2NDJkZmRiNzY4"}'
+        null}, "public_url": "https://track.easypost.com/djE6dHJrXzhkZTU0ZWM1Njk0NDRhMGVhYmQ3NWJkOWRjZWNjOTZi"}'
     headers:
       cache-control:
       - private, no-cache, no-store
@@ -131,7 +135,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"1b419ec8c8bd2a81e0c8b1057f0add75"
+      - W/"f1dbd24a8dbbf4bd1054a2894a0973fe"
       expires:
       - '0'
       pragma:
@@ -149,20 +153,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47c62fa95fbe79a7aeb00263784
+      - de846e056463b2d3e787383c002bd6f1
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.045730'
+      - '0.045946'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
